--- a/(연습)네이버웹툰 크롤링.ipynb
+++ b/(연습)네이버웹툰 크롤링.ipynb
@@ -296,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -383,6 +385,520 @@
    "source": [
     "#형제들 찾기\n",
     "rank1.find_next_siblings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<a href=\"/webtoon/detail.nhn?titleId=743139&amp;no=46\" onclick=\"nclk_v2(event,'rnk*p.cont','743139','3')\" title=\"한림체육관-46화\">한림체육관-46화</a>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find(\"a\",text = \"한림체육관-46화\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#네이버 웹툰 전체 목록 가져오기\n",
+    "cartoons = soup.find_all(\"a\", attrs={\"class\": \"title\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "참교육\n",
+      "뷰티풀 군바리\n",
+      "윈드브레이커\n",
+      "소녀의 세계\n",
+      "장씨세가 호위무사\n",
+      "파이게임\n",
+      "만렙돌파\n",
+      "유일무이 로맨스\n",
+      "브랜든\n",
+      "칼가는 소녀\n",
+      "요리GO\n",
+      "앵무살수\n",
+      "잔불의 기사\n",
+      "착한건 돈이된다\n",
+      "수영만화일기\n",
+      "야생천사 보호구역\n",
+      "히어로메이커\n",
+      "오늘의 순정망화\n",
+      "싸이코 리벤지\n",
+      "결혼생활 그림일기\n",
+      "평범한 8반\n",
+      "리턴 투 플레이어\n",
+      "아는 여자애\n",
+      "황제와의 하룻밤\n",
+      "살아간다\n",
+      "사장님을 잠금해제\n",
+      "바이러스X\n",
+      "선배, 그 립스틱 바르지 마요\n",
+      "순정말고 순종\n",
+      "마지막 지수\n",
+      "그림자 신부\n",
+      "꿈의 기업\n",
+      "백수세끼\n",
+      "서브 콤플렉스\n",
+      "침범\n",
+      "왕따협상\n",
+      "피플\n",
+      "와이키키 뱀파이어\n",
+      "두근두근 네가 좋아서\n",
+      "라서드\n",
+      "오로지 오로라\n",
+      "도플갱어의 게임\n",
+      "정보전사 202\n",
+      "개밥 먹는 남자\n",
+      "이탄국의 자청비\n",
+      "트리거\n",
+      "이중첩자\n",
+      "뱀파이어의 꽃\n",
+      "원하는 건 너 하나\n",
+      "백호랑\n",
+      "드로잉 레시피\n",
+      "여기 악마가 있어\n",
+      "인간의 온도\n",
+      "하슬라\n",
+      "헬로맨스\n",
+      "보살님이 캐리해!\n",
+      "사막에 핀 달\n",
+      "삼매경\n",
+      "여신강림\n",
+      "엽총소년\n",
+      "바른연애 길잡이\n",
+      "한림체육관\n",
+      "하루만 네가 되고 싶어\n",
+      "랜덤채팅의 그녀!\n",
+      "사신소년\n",
+      "신도림\n",
+      "헬58\n",
+      "호랑이 들어와요\n",
+      "삼국지톡\n",
+      "위아더좀비\n",
+      "원주민 공포만화\n",
+      "달콤살벌한 부부\n",
+      "집이 없어\n",
+      "중증외상센터 : 골든 아워\n",
+      "오피스 누나 이야기\n",
+      "악인\n",
+      "하우스키퍼\n",
+      "윌유메리미\n",
+      "아이즈\n",
+      "오늘의 순정망화\n",
+      "빌런투킬\n",
+      "아이레\n",
+      "견우와 선녀\n",
+      "태시트\n",
+      "올가미\n",
+      "용왕님의 셰프가 되었습니다\n",
+      "성인초딩\n",
+      "플레이, 플리\n",
+      "3cm 헌터\n",
+      "빅맨\n",
+      "제로게임\n",
+      "대신 심부름을 해다오\n",
+      "별종\n",
+      "연우의 순정\n",
+      "숲속의 담\n",
+      "오파츠\n",
+      "열녀박씨 계약결혼뎐\n",
+      "빛빛빛\n",
+      "은주의 방 2~3부\n",
+      "조선홍보대행사 조대박\n",
+      "자판귀\n",
+      "안식의 밤\n",
+      "언메이크\n",
+      "풋내기들\n",
+      "완벽한 가족\n",
+      "나의 플랏메이트\n",
+      "도를 아십니까\n",
+      "필살VS로맨스\n",
+      "장단에 맞춰줘!\n",
+      "피로만땅\n",
+      "인문학적 감수성\n",
+      "정년이\n",
+      "나타나주세요!\n",
+      "고수\n",
+      "전지적 독자 시점\n",
+      "급식아빠\n",
+      "모죠의 일지\n",
+      "복학왕\n",
+      "격기3반\n",
+      "튜토리얼 탑의 고인물\n",
+      "캐슬\n",
+      "남주의 첫날밤을 가져버렸다\n",
+      "하렘의 남자들\n",
+      "세상은 돈과 권력\n",
+      "노곤하개\n",
+      "여주실격!\n",
+      "일렉시드\n",
+      "연놈\n",
+      "원수를 사랑하라\n",
+      "고삼무쌍\n",
+      "닥터앤닥터 육아일기\n",
+      "나쁜사람\n",
+      "정순애 식당\n",
+      "화산귀환\n",
+      "판타지 여동생!\n",
+      "엔딩 후 서브남을 주웠다\n",
+      "빌드업\n",
+      "미래의 골동품 가게\n",
+      "마른 가지에 바람처럼\n",
+      "귀곡의 문\n",
+      "마녀와 용의 신혼일기\n",
+      "언덕 위의 제임스\n",
+      "반귀\n",
+      "사상최강\n",
+      "방탈출\n",
+      "각자의 디데이\n",
+      "아도나이\n",
+      "로어 올림푸스\n",
+      "범이올시다!\n",
+      "새벽 두 시의 신데렐라\n",
+      "이츠마인\n",
+      "럭키언럭키\n",
+      "더 트웰브\n",
+      "얼굴천재\n",
+      "말하는대로\n",
+      "칼부림\n",
+      "당신의 향수\n",
+      "속보입니다\n",
+      "뱀은 꽃을 먹는가\n",
+      "인터셉트\n",
+      "해귀\n",
+      "스캔들\n",
+      "노선도\n",
+      "천도\n",
+      "평화선도부\n",
+      "저승사자 출입금지\n",
+      "스몰\n",
+      "시효완성\n",
+      "수상한 비밀상담부\n",
+      "기억흔적\n",
+      "신선비\n",
+      "독립일기\n",
+      "연애혁명\n",
+      "더 복서\n",
+      "기기괴괴\n",
+      "이두나!\n",
+      "나노마신\n",
+      "화이트 블러드\n",
+      "노답소녀\n",
+      "정글쥬스\n",
+      "하드캐리\n",
+      "희망강림\n",
+      "전자오락수호대\n",
+      "무사만리행\n",
+      "수영만화일기\n",
+      "꽃만 키우는데 너무강함\n",
+      "당신의 과녁\n",
+      "오늘의 순정망화\n",
+      "신비\n",
+      "트롤트랩\n",
+      "쿠베라\n",
+      "던전 씹어먹는 아티팩트\n",
+      "최강전설 강해효\n",
+      "마계인섬\n",
+      "선의의 경쟁\n",
+      "달의 요람\n",
+      "겟백\n",
+      "어차피 남편은!\n",
+      "만물의 영장\n",
+      "시월드 판타지\n",
+      "그 황제가 시곗바늘을 되돌린 사연\n",
+      "자취방 신선들\n",
+      "루커피쳐\n",
+      "별을 삼킨 너에게\n",
+      "롤랑롤랑\n",
+      "오일머니\n",
+      "로그아웃\n",
+      "성스러운 아이돌\n",
+      "안개무덤\n",
+      "겟라이프\n",
+      "셈하는 사이\n",
+      "집사레인저\n",
+      "소녀180\n",
+      "불릿 6미리\n",
+      "유리와 유리와 유리\n",
+      "미드나잇 체이서\n",
+      "스테어스\n",
+      "바른탕진 프로젝트\n",
+      "카루나\n",
+      "밤하늘에 구름운\n",
+      "보물과 괴물의 도시\n",
+      "헬프미\n",
+      "악령주의보\n",
+      "외모지상주의\n",
+      "갓 오브 하이스쿨\n",
+      "데드퀸\n",
+      "재혼 황후\n",
+      "1초\n",
+      "개를 낳았다\n",
+      "여성전용헬스장 진달래짐\n",
+      "삼국지톡\n",
+      "똑똑한 나 인증\n",
+      "히어로 킬러\n",
+      "환상의 용\n",
+      "낙향문사전\n",
+      "더 게이머\n",
+      "세기말 풋사과 보습학원\n",
+      "살人스타그램\n",
+      "그 기사가 레이디로 사는 법\n",
+      "스포\n",
+      "뫼신 사냥꾼\n",
+      "걸어서 30분\n",
+      "사람의 조각\n",
+      "복학생 정순이\n",
+      "플레이어\n",
+      "난약\n",
+      "썸내일\n",
+      "엽사:요괴사냥꾼\n",
+      "상남자\n",
+      "구남친이 내게 반했다\n",
+      "악몽일기\n",
+      "고래별\n",
+      "성경의 역사\n",
+      "가슴털 로망스\n",
+      "금혼령-조선혼인금지령\n",
+      "A.I. 닥터\n",
+      "감자마을\n",
+      "닥터 프로스트 시즌 3~4\n",
+      "피와 나비\n",
+      "후덜덜덜 남극전자\n",
+      "도롱이\n",
+      "방과후 선녀\n",
+      "빨리감기\n",
+      "트럼프\n",
+      "몽홀\n",
+      "도무지 그애는\n",
+      "구독금지\n",
+      "감히\n",
+      "꽃 피우는 남자\n",
+      "백년게임\n",
+      "진짜 정말 맹세코 좋아해\n",
+      "나쁜 쪽으로\n",
+      "버그: 스티그마\n",
+      "스윗솔티\n",
+      "히트포인트\n",
+      "강림전기 개정기\n",
+      "구주의 시간\n",
+      "매지컬 메디컬\n",
+      "프리드로우\n",
+      "호랑이형님\n",
+      "모죠의 일지\n",
+      "취사병 전설이 되다\n",
+      "초인의 시대\n",
+      "욕망일기\n",
+      "광장\n",
+      "노곤하개\n",
+      "힙한남자\n",
+      "스터디그룹\n",
+      "청춘 블라썸\n",
+      "민간인 통제구역\n",
+      "아홉수 우리들\n",
+      "토끼대왕\n",
+      "지옥급식\n",
+      "좀비 파이트\n",
+      "나이트런\n",
+      "윌유메리미\n",
+      "어글리후드\n",
+      "나를 바꿔줘\n",
+      "갓핑크\n",
+      "피라미드 게임\n",
+      "두번째 생일\n",
+      "동트는 로맨스\n",
+      "탑코너\n",
+      "율리\n",
+      "단편.zip\n",
+      "왕년엔 용사님\n",
+      "아가사\n",
+      "남자주인공의 여자사람친구입니다\n",
+      "먹이\n",
+      "공유몽\n",
+      "홍시는 날 좋아해!\n",
+      "광해의 연인\n",
+      "군주\n",
+      "웰캄투실버라이프\n",
+      "내게 필요한 NO맨스\n",
+      "태백 : 튜토리얼 맨\n",
+      "왕세자 입학도\n",
+      "저무는 해, 시린 눈\n",
+      "더 나우\n",
+      "좋은데 어떡해\n",
+      "동네몬스터\n",
+      "압락사스\n",
+      "팔려 온 신부\n",
+      "아테나 컴플렉스\n",
+      "오늘부터 천생연분\n",
+      "모두 너였다\n",
+      "피노키오 소녀\n",
+      "후아유!\n",
+      "도사 가온\n",
+      "안녕, 이바다씨\n",
+      "손 잡아 볼래?\n",
+      "아침을 지나 밤으로\n",
+      "꼬리 있는 연애\n",
+      "친구의 비밀계정\n",
+      "커피도둑\n",
+      "인간졸업\n",
+      "언플래시레슨\n",
+      "함부로 대해줘\n",
+      "먹지마세요\n",
+      "누군가의 로섬\n",
+      "어른의 계절\n",
+      "독립일기\n",
+      "싸움독학\n",
+      "약한영웅\n",
+      "열렙전사\n",
+      "이번 생도 잘 부탁해\n",
+      "입학용병\n",
+      "맘마미안\n",
+      "테러대부활\n",
+      "소녀재판\n",
+      "도망자\n",
+      "닥터앤닥터 육아일기\n",
+      "천하제일인\n",
+      "곱게 키웠더니, 짐승\n",
+      "나만 보여!\n",
+      "오로지 너를 이기고 싶어\n",
+      "살아남은 로맨스\n",
+      "동생친구\n",
+      "사람은 고쳐 쓰는 게 아니야!\n",
+      "인어를 위한 수영교실\n",
+      "합격시켜주세용\n",
+      "행성인간\n",
+      "마법스크롤 상인 지오\n",
+      "구름이 피워낸 꽃\n",
+      "가비지타임\n",
+      "별이삼샵\n",
+      "경비 배두만\n",
+      "AI가 세상을 지배한다면\n",
+      "로어 올림푸스\n",
+      "다이스(DICE)\n",
+      "벚꽃이 흩날릴 무렵\n",
+      "판사 이한영\n",
+      "강남도깨비\n",
+      "학교정벌\n",
+      "평행도시\n",
+      "아르세니아의 마법사\n",
+      "라일락 200%\n",
+      "결혼까지 망상했어!\n",
+      "데빌샷\n",
+      "조선여우스캔들\n",
+      "오른눈이 보는 세계\n",
+      "두근두근 연극부\n",
+      "잉여특공대\n",
+      "오늘 밤만 재워줘\n",
+      "내일\n",
+      "라커, 오프너\n",
+      "신이 담긴 아이\n",
+      "마도\n",
+      "소녀 해미\n",
+      "데이즈\n",
+      "위험한 신입사원\n",
+      "여름은 뜨겁다\n",
+      "죽여주는 탐정님\n",
+      "스트러글\n",
+      "샤인 스타\n",
+      "호시탐탐\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cartoon in cartoons:\n",
+    "    print(cartoon.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#가우스전자 긁기\n",
+    "url = \"https://comic.naver.com/webtoon/list.nhn?titleId=675554\"\n",
+    "res = requests.get(url)\n",
+    "res.raise_for_status()\n",
+    "soup = BeautifulSoup(res.text, \"lxml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "cartoons = soup.find_all(\"td\", attrs={\"class\": \"title\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=911&weekday=mon\n"
+     ]
+    }
+   ],
+   "source": [
+    "link= cartoons[0].a[\"href\"]\n",
+    "print(\"https://comic.naver.com\" + link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "후기 + 10년 후 가우스 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=911&weekday=mon\n",
+      "시즌4 430화 내일 봐요 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=910&weekday=mon\n",
+      "시즌4 429화 잠행 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=909&weekday=mon\n",
+      "시즌4 428화 추억 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=908&weekday=mon\n",
+      "시즌4 427화 섬세한사람 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=907&weekday=mon\n",
+      "시즌4 426화 적응 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=906&weekday=mon\n",
+      "시즌4 425화 대견 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=905&weekday=mon\n",
+      "시즌4 424화 초빙강사 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=904&weekday=mon\n",
+      "시즌4 423화 추억의 물건 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=903&weekday=mon\n",
+      "시즌4 422화 아니요 https://comic.naver.com/webtoon/detail.nhn?titleId=675554&no=902&weekday=mon\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cartoon in cartoons:\n",
+    "    title = cartoon.a.get_text()\n",
+    "    link = \"https://comic.naver.com\" + cartoon.a[\"href\"]\n",
+    "    print(title, link)"
    ]
   },
   {
